--- a/index.html
+++ b/index.html
@@ -80,16 +80,34 @@ Start coding from here
         </li>
     </ul>
 
-
-
+    <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="books">
+        <h2 class=text-capitalize>books I read </h2>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 books" data-toggle="modal" data-target="#book_1"><img src=s1.jpg class=img-responsive>
+        <hr>
+        <p class="text-primary text-captilize">1st space encyclopedia</p>
+    </div>
+    <div class="modal fade" id="book_1">
+        <div class="modal-dialog">
+            <div class=modal-content>
+                <div class=modal-header><button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">First Space Encyclopaedia</h4>
+                </div>
+                <div class="modal-body"><img src=s1.jpg class="img-responsive img-modal">
+                    <p class=p_modal>Zoom off into the galaxy and investigate all the planets, from Earth to Mars with First Space Encyclopaedia. Packed full of stunning photography, quizzes and amazing facts, children will become space experts in no time. Covering everything from observatories and rockets, to the solar system and the death of stars, children will discover all about space and space travel.<br><a href="https://www.amazon.com/s?k=first+space+encyclopedia&crid=9NRAJSNPR4TX&sprefix=first+space+en%2Caps%2C244&ref=nb_sb_ss_ts-doa-p_1_14" target="_blank">Best Buy Link!</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <section id="contact">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.4831372536233!2d114.02067103182246!3d22.439178625854574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403fa746d81e4eb%3A0x24f184b00fe400d2!2sEmerald%20Green%20Block%205%2C%20138%20Shap%20Pat%20Heung%20Rd%2C%20Yuen%20Long!5e0!3m2!1sen!2shk!4v1639994308946!5m2!1sen!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.4831372536233!2d114.02067103182246!3d22.439178625854574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403fa746d81e4eb%3A0x24f184b00fe400d2!2sEmerald%20Green%20Block%205%2C%20138%20Shap%20Pat%20Heung%20Rd%2C%20Yuen%20Long!5e0!3m2!1sen!2shk!4v1639994308946!5m2!1sen!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <hr style="width:100%">
-<img src="My%20photo.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4"><h3>Kaavya Bakuly</h3>
+        <img src="My%20photo.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
+        <h3>Kaavya Bakuly</h3>
         <div class="contact_1">
 
             <a href="mailto:my@gmail.com?Subject=Hi">
-                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;mygmailid@gmail.com</h5>
+                <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;kaavyabakuly@gmail.com</h5>
             </a>
 
             <a href="#">
